ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/MIS_RC_Limit_Dt__c.object-meta.xml
<CustomObject>
    <label>MIS RC Limit Dt</label>
    <nameField>
        <label>MIS_RC_Limit_Dt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MIS RC Limit Dts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>