ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Ageing_Days__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ageing Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>