ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Ageing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Flag__c</fullName>
    <label>Ageing Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>