ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Ben_Code__c</fullName>
    <label>Ben Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>