ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Bl_Name__c.field-meta.xml
<CustomField>
    <fullName>Bl_Name__c</fullName>
    <label>Bl Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>