ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <label>Customer Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>