ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Deal_No__c.field-meta.xml
<CustomField>
    <fullName>Deal_No__c</fullName>
    <label>Deal No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>