ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/Disbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Date__c</fullName>
    <label>Disbursed Date</label>
    <type>DateTime</type>
</CustomField>