ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/IBL_Lien_Marked__c.field-meta.xml
<CustomField>
    <fullName>IBL_Lien_Marked__c</fullName>
    <label>IBL Lien Marked</label>
    <length>1</length>
    <type>Text</type>
</CustomField>