ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/IBL_Lien_Marked_On__c.field-meta.xml
<CustomField>
    <fullName>IBL_Lien_Marked_On__c</fullName>
    <label>IBL Lien Marked On</label>
    <type>DateTime</type>
</CustomField>