ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/OD__c.field-meta.xml
<CustomField>
    <fullName>OD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>