ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_Dt__c/fields/RC_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RC_Uploaded__c</fullName>
    <label>RC Uploaded</label>
    <length>1</length>
    <type>Text</type>
</CustomField>